[package]
name = "backup_text"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["protobuf-codec"]
protobuf-codec = [
    "tipb/protobuf-codec",
    "tidb_query_datatype/protobuf-codec",
    "tikv_util/protobuf-codec",
    "external_storage_export/protobuf-codec",
    "kvproto/protobuf-codec",
]

[dependencies]
blake2 = "0.9"
hex = "0.4"
codec = { path = "../codec", default-features = false }
engine_rocks = { path = "../engine_rocks", default-features = false }
engine_traits = { path = "../engine_traits", default-features = false }
flate2 = { version = "1.0", default-features = false, features = ["zlib"] }
keys = { path = "../keys", default-features = false }
lazy_static = "1.3"
tikv_util = { path = "../tikv_util", default-features = false }
tipb = { git = "https://github.com/pingcap/tipb.git", default-features = false }
tidb_query_datatype = { path = "../tidb_query_datatype", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [
    "float_roundtrip", # enable this to ensure sufficient precision for float numbers
] }
collections = { path = "../collections/" }
txn_types = { path = "../txn_types", default-features = false }
slog = { version = "2.3", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
# better to not use slog-global, but pass in the logger
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }


external_storage_export = { path = "../external_storage/export", default-features = false }
structopt = "0.3"
tokio = { version = "1.5", features = ["time", "rt"] }
futures = "0.3"
kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
protobuf = "2"
async-recursion = "0.3"
anyhow = "1.0"
slog-term = "2.4"
